# pymor-deal.II

./: .clang-format  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.script.bash  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.binder/: Dockerfile  Dockerfile.in  dev-entrypoint.bash  docker-compose.yml
.ci/: azure-pipelines.yml  common_setup.bash  install.bash  job-template.yml  make_env_file.py  pytest.bash  requirements-ci.txt  travis.script.bash  wheel.bash
.github/workflows/: checks.yml  link_check.yml  tests.yml
docker/: Makefile
docker/demo/: Dockerfile  entrypoint.sh
lib/: CMakeLists.txt  bindings.cc  dealii_bindings.cc  dealii_macro.cmake  discretization.cc  discretization.hh  elastic_eoc.cc  elasticity.cc  elasticity.hh  eoc.cc  example.cc  example.hh  py_elasticity.cc  rhs.hh  test_bindings.py
src/pydealii/pymor/: demo.py  eoc.py  gui.py  operator.py  plotting.py  vectorarray.py
src/pymor/: vectorarray.py
src/pymor/vectorarrays/: dealii.py
src/pymor_dealii/: __init__.py  version.py
src/pymor_dealii/pymor/: demo.py  gui.py  operator.py  vectorarray.py
src/test/: demo.py  demo_result.pickle
test/: demo_result.pickle  test_bindings.py  test_demo.py
test/test_demo/: test_demo_results.npz
