[project]
name = "pymor_dealii"
dynamic = ["version"]
description = "pyMOR bindings for deal.II"
readme = "README.md"
authors = [
  {name = "pyMOR developers", email = "main.developers@pymor.org"}
]
maintainers = [
  {name = "Stephan Rave", email = "stephan.rave@uni-muenster.de"},
]
requires-python = ">=3.9"
dependencies = [
  "pymor==2024.2.*"
]

[project.urls]
homepage = "https://pymor.org"
source = "https://github.com/pymor/pymor-deal.II"
tracker = "https://github.com/pymor/pymor-deal.II/issues"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-regressions"
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/pymor_dealii/__init__.py"

[tool.coverage.run]
source = [
  "src/pymor_dealii",
  "src/test"
]
omit = [
  "src/pymor_dealii/version.py"
]
relative_files = true

[tool.pytest.ini_options]
testpaths = "test"
# python_files = "src/test/*.py"
junit_family = "xunit2"
python_classes = "Test"

[tool.ruff]
src = ["src"] # this makes isort behave nicely
line-length = 120

[tool.ruff.lint]
select = [
  "F", # Pyflakes
  "W", # pycodestyle warning
  "E", # pycodestyle error
  "I", # isort
  "N", # pep8-naming
  "D", # pydocstyle
  "UP", # pyupgrade
  "YTT", # flake8-2020
  "ASYNC", # flake8-async
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "EXE", # flake8-executable
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "Q", # flake8-quotes
  "RSE", # flake8-raise
  "SIM", # flake8-simplify
  "TD", # flake8-todos
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific rules
  "NPY", # NumPy-specific rules
]
ignore = [
  "B006", # do not use mutable data structures for argument defaults
  "B007", # loop control variable not used within loop body
  "B008", # do not perform function call in argument defaults
  "B011", # do not `assert False`
  "B017", # pytest.raises(Exception) should be considered evil
  "B028", # no explicit `stacklevel` keyword argument found
  "C408", # unnecessary collection (dict, list, tuple) call
  "D100", # missing docstring in public module
  "D101", # missing docstring in public class
  "D102", # missing docstring in public method
  "D103", # missing docstring in public function
  "D104", # missing docstring in public package
  "D105", # missing docstring in magic method
  "D106", # missing docstring in public nested class
  "D203", # 1 blank line required before class docstring
  "D212", # multi-line docstring summary should start at the first line
  "D401", # first line of docstring should be in imperative mood
  "D404", # first word of the docstring should not be "This"
  "D405", # the linter thinks the argument name 'parameters' is a docstring section
  "D407", # same as above
  "D410", # same as above
  "D411", # same as above
  "D414", # same as above
  "E402", # module level import not at top of file (due to config.require("PKG") syntax)
  "E731", # do not assign a lambda expression, use a def
  "E741", # do not use variables named 'l', 'O', or 'I'
  "N802", # function name should be lowercase
  "N803", # argument name should be lowercase (we use single capital letters everywhere for vectorarrays)
  "N806", # same for variables in function
  "PT011", # pytest.raises(Exception) is too broad
  "PT012", # pytest.raises() block should contain a single simple statement
  "PT015", # assertion always fails, replace with `pytest.fail()`
  "RUF005", # consider unpacking instead of concatenation
  "RUF021", # parenthesize a and b expressions when chaining and and or together, to make the precedence clear
  "RUF023", # __slots__ is not sorted
  "SIM102", # use a single if statement instead of nested if statements
  "SIM103", # return the condition directly
  "SIM105", # use contextlib.suppress instead of try-except-pass
  "SIM108", # use ternary operator instead of if-else-block
  "SIM114", # combine if branches using logical or operator
  "SIM116", # use a dictionary instead of consecutive `if` statements
  "SIM300", # Yoda conditions
  "TD002", # missing author in TODO
  "TD003", # missing issue link on the line following this TODO
]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["numpy.linalg"] # avoids importing similar routines from numpy.linalg and scipy.linalg

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"scipy.linalg" = "spla"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"
